adding main section html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1 class="title">ROCK PAPER SCISSORS</h1>
+    </header>
+    <main class="main">
+        <div class="scoreboard">
+            <h2 id="rule" class="rule">
+                After 5 rows, either you or the computer wins
+            </h2>
+            <h2 id ="scoring" class="score-info">
+                Your move:
+            </h2>
+        </div>
+    </main>
     <script src="RPS.js"></script>
 </body>
 </html>
