Editing CSS of class rule

--- a/index.html
+++ b/index.html
@@ -4,23 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1 class="title">ROCK PAPER SCISSORS</h1>
+        <h1 class="title">ROCK 🪨 PAPER 🧻 SCISSORS ✂️</h1>
     </header>
     <main class="main">
         <div class="scoreboard">
             <h2 id="rule" class="rule">
-                After 5 rows, either you or the computer wins
+                After 5 rows, either you or the computer wins.
             </h2>
             <h2 id ="scoring" class="score-info">
-                Your move:
+                Your move:  
             </h2>
+            <div class="score-container">
+                <div id="playerSelection" class="selection">?</div>
+                <p id="playerScore" class="score">Player: 0</p>
+            </div>
+            <div class="score-container">
+                <div id="playerSelection" class="selection">?</div>
+                <p id="playerScore" class="score">Player: 0</p>
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="rockBtn" class="btn btn-square">
+                <div class="sign">🪨</div>
+            </button>
+            <button id="paperBtn" class="btn btn-square">
+                <div class="sign">🧻</div>
+            </button>
+            <button id="scissorBtn" class="btn btn-square">
+                <div class="sign">✂️</div>
+            </button>
         </div>
     </main>
+    <footer class="footer">
+        <p>
+            Copyright © 2011 honganh1206
+        </p>
+    </footer>
+    <div id="endGameModal" class="modal">
+        <p id="endGameMsg" class="modal-title">You lost...</p>
+        <button id="restartBtn" class="btn btn-restart">Play again?</button>
+    </div>
     <script src="RPS.js"></script>
 </body>
 </html>
