--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                 Your move:  
             </h2>
             <div class="score-container">
-                <div id="playerSelection" class="selection">?</div>
-                <p id="playerScore" class="score">Player: 0</p>
-            </div>
-            <div class="score-container">
-                <div id="playerSelection" class="selection">?</div>
-                <p id="playerScore" class="score">Player: 0</p>
+                <div class="score-box">
+                    <div id="playerSelection" class="selection">?</div>
+                    <p id="playerScore" class="score">Player: 0</p>
+                </div>
+                <div class="score-box">
+                    <div id="computerSelection" class="selection">?</div>
+                    <p id="playerScore" class="score">Computer: 0</p>
+                </div>
             </div>
         </div>
         <div class="buttons">
@@ -49,6 +51,6 @@
         <p id="endGameMsg" class="modal-title">You lost...</p>
         <button id="restartBtn" class="btn btn-restart">Play again?</button>
     </div>
-    <script src="RPS.js"></script>
+    <!--<script src="RPS.js"></script> -->
 </body>
 </html>
