adding consts in js and adjusting css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title> 🕹️ Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             <h2 id="rule" class="rule">
                 After 5 rows, either you or the computer wins.
             </h2>
-            <h2 id ="scoring" class="score-info">
+            <h2 id ="scoreInfo" class="score-info">
                 Your move:  
             </h2>
             <div class="score-container">
@@ -59,6 +59,7 @@
         <p id="endGameMsg" class="modal-title-win">You won!</p>
         <button id="restartBtn" class="btn btn-restart">Play again?</button>
     </div>
+    <div id="overlay" class="overlay"></div>
     <!--<script src="RPS.js"></script> -->
 </body>
 </html>
