--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 id="rule" class="rule">
                 After 5 rows, either you or the computer wins.
             </h2>
-            <h2 id ="scoreInfo" class="score-info">
+            <h3 id ="scoreInfo" class="score-info">
                 Your move:  
             </h2>
             <div class="score-container">
@@ -52,14 +52,11 @@
         </p>
     </footer>
     <div id="endGameModal" class="modal active">
-        <p id="endGameMsg" class="modal-title-lose">You lost...</p>
-        <button id="restartBtn" class="btn btn-restart">Play again?</button>
-    </div>
-    <div id="endGameModal" class="modal active">
-        <p id="endGameMsg" class="modal-title-win">You won!</p>
+        <p id="endGameMsg" class="modal-title-win"></p>
         <button id="restartBtn" class="btn btn-restart">Play again?</button>
     </div>
     <div id="overlay" class="overlay"></div>
-    <!--<script src="RPS.js"></script> -->
+    <script src="RPS.js"></script>
 </body>
+
 </html>
