Done! Change footnote css?

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </h2>
             <div class="score-container">
                 <div class="score-box">
-                    <div id="playerSelection" class="selection">?</div>
+                    <div id="playerSelection" class="selection">❔</div>
                     <p id="playerScore" class="score">Player: 0</p>
                 </div>
                 <div class="score-box">
-                    <div id="computerSelection" class="selection">?</div>
-                    <p id="playerScore" class="score">Computer: 0</p>
+                    <div id="computerSelection" class="selection">❔</div>
+                    <p id="computerScore" class="score">Computer: 0</p>
                 </div>
             </div>
         </div>
@@ -51,8 +51,8 @@
             honganh1206
         </p>
     </footer>
-    <div id="endGameModal" class="modal active">
-        <p id="endGameMsg" class="modal-title-win"></p>
+    <div id="endGameModal" class="modal">
+        <p id="endGameMsg" class="modal-title"></p>
         <button id="restartBtn" class="btn btn-restart">Play again?</button>
     </div>
     <div id="overlay" class="overlay"></div>
